Modified to fit core

--- a/index.html
+++ b/index.html
@@ -3,7 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Gym Store</title>
+
+    <!-- Primary Meta Tags -->
+    <title>FIT CORE</title>
+    <meta name="title" content="">
+    <meta name="description" content="">
+
+    <!-- Favicons -->
+    <link rel="icon" href="./public/favicon.ico" />
+    <link rel="apple-touch-icon" href="./public/apple-touch-icon.png" />
+    <link rel="android-chrome" href="./public/android-chrome-192x192.png" />
+
   </head>
   <body class="bg-gray-50 text-gray-900">
     <div id="root"></div>
